# tonnetz-graph

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: pkg.yml
data/: LSTM_checkpt.pth  LSTM_checkpt_16th.pth  LSTM_checkpt_8th.pth  lstm_generated_seq (2).csv  lstm_generated_seq (5).csv  lstm_generated_seq (6).csv  lstm_generated_seq.csv  lstm_generated_seq_8th.csv  sequences.csv
raw_midi/: My_Heart_Will_Go_On_combined.mid  mono_channels.csv  rw_melody_betweenness.mid  rw_melody_degree.mid  rw_melody_eigenvector.mid  rw_melody_lstm1.mid  rw_melody_lstm2.mid  rw_melody_lstm3.mid  rw_melody_random.mid
scripts/: analysis.py  generate_dataset.py  monophonic_analysis.py  play.py  play_interval_lstm.py
tests/: test_centrality.py  test_parser.py  test_plot.py  test_statistics.py
tonnetz/LSTM/: datagenerator.py  model.py  sampling.py  train.py
tonnetz/graph/: builder.py  centrality.py  statistics.py
tonnetz/midi/: parser.py  player.py
tonnetz/util/: util.py
tonnetz/viz/: plot.py
