[project]
name = "tonnetz-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mido>=1.3.3",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["tonnetz"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
